Shrink some elements

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div class="main">
+    <div class="journal-policy-search">
       <h1>Law Journal Reposting Policy Search</h1>
       <div class="policies">
         <table id="policies__table"></table>
