Add loading gif

--- a/main.html
+++ b/main.html
@@ -14,7 +14,11 @@
     <div class="journal-policy-search">
       <h1>Law Journal Reposting Policy Search</h1>
       <div class="policies">
-        <table id="policies__table"></table>
+        <table id="policies__table">
+          <div class="policies__loading">
+            <img src="loading.gif" />
+          </div>
+        </table>
       </div>
     </div>
   </body>
